- Implemented: Roomplan selector on switches/utility tab
- Changed: Date/Time notation in log to ISO-8601 (thanks to Ugo)
- Changed: OpenZWave logging, more persistant with node id's (thanks to Ugo)
- Implemented: Scene/Group, Blinds Percentage(+Inverted) can now set the percentage level
- Fixed: Setpoint timers, 'when' selection
- Implemented: ttyACM serial ports if available

Version 2.0.2025 (September 28th 2014)
- Implemented: Fibaro Link data pusher
- Implemented: Splash screen for iPhone5 retina
- Implemented: Navigation toolbar for mobile devices
- Fixed: Dashboard/mobile, double 'open' for contact switch types6
- Implemented: Delete short log value P1 SmartLog (Shift-Left click)
- Implemented: Switch Scene/Group behaviour with learn codes enabled
- Changed: Energy Device now logs updates same value in short log
- Fixed: S0 Meter second pulse counter
- Fixed: Editing Utility Setpoint Name
- Implemented: EventSystem can now use the utility values for Percentage/Voltage/Lux
- Fixed: Editing Humidity Device will (Not displaying temperature adjustment)
- Implemented: Option to delete data point from sensor by Shift-Left click on short log for counter graphs
- Implemented: Rasberry Pi GPIO (WiringPi) support, thanks to Vicne!
- Implemented: additional dparam replacement for the json command option (can be used where &param is translated to ParaCharacterEntity (PHP for example)
- Implemented: today value for Energy devices in Utility tab
- Implemented: Device Name now displayed for the Scene/Group learn code
- Changed: startup script path to include /usr/local/bin, users of wiringPi should replace the startup script
- Fixed: Chime devices now visible on dashboard
- Implemented: Added Fibaro Motion Sensor (0800/1001) to the openzwave manufacturer file
- Changed: startup script now compatible with new ubuntu pidofproc
- Fixed: Hardware Setup, motherboard sensors can now be enabled/disabled